--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,22 @@
 
 
         </activity>
+        <activity
+            android:name=".MinesweeperGame4"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            >
+
+
+        </activity>
+        <activity
+            android:name=".MinesweeperGame5"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            >
+
+
+        </activity>
 
     </application>
 
