--- a/local.properties
+++ b/local.properties
@@ -7,10 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Mon Jul 31 13:13:45 ICT 2017
+#Fri Aug 04 20:20:47 ICT 2017
+>>>>>>>=25fb2da26b4a141e3ccdecb7f0b095ef36d8c75a
 sdk.dir=C\:\\Users\\Henry\\AppData\\Local\\Android\\Sdk
-=======
-#Wed Aug 02 13:49:21 ICT 2017
-sdk.dir=C\:\\Android\\SdkLocal
->>>>>>> 25fb2da26b4a141e3ccdecb7f0b095ef36d8c75a
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
