--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
 
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".Score"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
@@ -58,6 +59,7 @@
 
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".score_difficulty"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
