--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Aug 07 02:08:43 ICT 2017
+#Mon Aug 07 22:15:43 ICT 2017
 >>>>>>>=25fb2da26b4a141e3ccdecb7f0b095ef36d8c75a
-sdk.dir=D\:\\Android\\sdk
-=\=\=\=\=\=\=
+sdk.dir=E\:\\androidsdk\\Sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
